--- a/src/style.css
+++ b/src/style.css
@@ -16,9 +16,12 @@ a:focus {
 
 
 .container {
+  position: relative;
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 #place-picker-map {
